--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "react-native-screens": "~3.15.0",
     "react-native-vector-icons": "^9.2.0",
     "react-navigation-drawer": "^2.7.2",
-    "react-navigation-stack": "react-navigation/stack"
+    "react-navigation-stack": "react-navigation/stack",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.2",
+    "@react-navigation/stack": "^5.12.8",
+    "react-native-gesture-handler": "^1.9.0",
+    "react-native-reanimated": "^1.13.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
