--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
+    "@react-navigation/stack": "^5.12.8",
     "expo": "~46.0.13",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-gesture-handler": "^2.7.0",
     "react-native-paper": "5.0.0-rc.6",
+    "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-vector-icons": "^9.2.0",
     "react-navigation-drawer": "^2.7.2",
-    "react-navigation-stack": "react-navigation/stack",
-    "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/bottom-tabs": "^5.11.2",
-    "@react-navigation/stack": "^5.12.8",
-    "react-native-gesture-handler": "^1.9.0",
-    "react-native-reanimated": "^1.13.2"
+    "react-navigation-stack": "react-navigation/stack"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
