--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@react-navigation/stack": "^5.12.8",
     "expo": "~46.0.13",
     "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.6",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-gesture-handler": "^2.7.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "5.0.0-rc.6",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "4.3.1",
